# frobnicate

./: .gitignore  CHANGELOG.md  Taskfile.yml  pyproject.toml
.github/workflows/: release-please.yml  workflow.yml
containers/: Containerfile
frobnicate/: main.py
tests/: test_command.py
